; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_conf.c_dev_refthread.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_conf.c_dev_refthread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdevsw = type { i32 }
%struct.cdev = type { i32, i32, %struct.cdevsw* }
%struct.cdev_priv = type { i32 }

@devmtx = common dso_local global i32 0, align 4
@MA_NOTOWNED = common dso_local global i32 0, align 4
@SI_ETERNAL = common dso_local global i32 0, align 4
@CDP_SCHED_DTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cdevsw* @dev_refthread(%struct.cdev* %0, i32* %1) #0 {
  %3 = alloca %struct.cdevsw*, align 8
  %4 = alloca %struct.cdev*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.cdevsw*, align 8
  %7 = alloca %struct.cdev_priv*, align 8
  store %struct.cdev* %0, %struct.cdev** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32, i32* @MA_NOTOWNED, align 4
  %9 = call i32 @mtx_assert(i32* @devmtx, i32 %8)
  %10 = load %struct.cdev*, %struct.cdev** %4, align 8
  %11 = getelementptr inbounds %struct.cdev, %struct.cdev* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @SI_ETERNAL, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i32*, i32** %5, align 8
  store i32 0, i32* %17, align 4
  %18 = load %struct.cdev*, %struct.cdev** %4, align 8
  %19 = getelementptr inbounds %struct.cdev, %struct.cdev* %18, i32 0, i32 2
  %20 = load %struct.cdevsw*, %struct.cdevsw** %19, align 8
  store %struct.cdevsw* %20, %struct.cdevsw** %3, align 8
  br label %51

21:                                               ; preds = %2
  %22 = call i32 (...) @dev_lock()
  %23 = load %struct.cdev*, %struct.cdev** %4, align 8
  %24 = getelementptr inbounds %struct.cdev, %struct.cdev* %23, i32 0, i32 2
  %25 = load %struct.cdevsw*, %struct.cdevsw** %24, align 8
  store %struct.cdevsw* %25, %struct.cdevsw** %6, align 8
  %26 = load %struct.cdevsw*, %struct.cdevsw** %6, align 8
  %27 = icmp ne %struct.cdevsw* %26, null
  br i1 %27, label %28, label %43

28:                                               ; preds = %21
  %29 = load %struct.cdev*, %struct.cdev** %4, align 8
  %30 = call %struct.cdev_priv* @cdev2priv(%struct.cdev* %29)
  store %struct.cdev_priv* %30, %struct.cdev_priv** %7, align 8
  %31 = load %struct.cdev_priv*, %struct.cdev_priv** %7, align 8
  %32 = getelementptr inbounds %struct.cdev_priv, %struct.cdev_priv* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @CDP_SCHED_DTR, align 4
  %35 = and i32 %33, %34
  %36 = icmp eq i32 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %28
  %38 = load %struct.cdev*, %struct.cdev** %4, align 8
  %39 = getelementptr inbounds %struct.cdev, %struct.cdev* %38, i32 0, i32 1
  %40 = call i32 @atomic_add_long(i32* %39, i32 1)
  br label %42

41:                                               ; preds = %28
  store %struct.cdevsw* null, %struct.cdevsw** %6, align 8
  br label %42

42:                                               ; preds = %41, %37
  br label %43

43:                                               ; preds = %42, %21
  %44 = call i32 (...) @dev_unlock()
  %45 = load %struct.cdevsw*, %struct.cdevsw** %6, align 8
  %46 = icmp ne %struct.cdevsw* %45, null
  br i1 %46, label %47, label %49

47:                                               ; preds = %43
  %48 = load i32*, i32** %5, align 8
  store i32 1, i32* %48, align 4
  br label %49

49:                                               ; preds = %47, %43
  %50 = load %struct.cdevsw*, %struct.cdevsw** %6, align 8
  store %struct.cdevsw* %50, %struct.cdevsw** %3, align 8
  br label %51

51:                                               ; preds = %49, %16
  %52 = load %struct.cdevsw*, %struct.cdevsw** %3, align 8
  ret %struct.cdevsw* %52
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @dev_lock(...) #1

declare dso_local %struct.cdev_priv* @cdev2priv(%struct.cdev*) #1

declare dso_local i32 @atomic_add_long(i32*, i32) #1

declare dso_local i32 @dev_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
